:lipstick: minor ui changes

--- a/src/app/done-voting/done-voting.component.html
+++ b/src/app/done-voting/done-voting.component.html
@@ -13,15 +13,14 @@
   <div class="row justify-content-center">
 
     <div class="col-md-6">
-      <button type="button" class="btn btn-primary btn-lg btn-block  " routerLink="/createpoll">
+      <button type="button" class="btn btn-primary btn-lg  btn-block  " routerLink="/createpoll">
         Create Your poll!
       </button>
       <div class="container text-center">
         <br>
         <div class="row justify-content-center">
           <div class="col-md-8">
-            <button type="button" class="btn btn-primary btn-lg btn-block  width" routerLink="/mypolls">Show My Polls</button>
-
+            <button type="button" class="btn btn-outline-primary btn-lg btn-block  width" routerLink="/mypolls">Show My Polls</button>
           </div>
         </div>
       </div>
